--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "fei-song/sf-base",
+    "name": "fei-song/sf-starter",
     "license": "proprietary",
     "type": "project",
     "autoload": {
