--- a/app.json
+++ b/app.json
@@ -17,11 +17,7 @@
             "value": "prod",
             "description": "If you want to use the Symfony `dev` environment in the deployed application, you must move the necessary dependencies (like SensioGeneratorBundle) from `require-dev` to `require`. This will introduce security issues because development tools like the WebProfiler reveal sensitive information."
         },
-        "SYMFONY_LOG": "php://stderr",
-        "SYMFONY_SECRET": {
-            "description": "Extra entropy for %kernel.secret%; used for CSRF tokens, cookies and signed URLs.",
-            "generator": "secret"
-        }
+        "SYMFONY_LOG": "php://stderr"
     },
     "addons": [
         "heroku-mysql"
