--- a/composer.json
+++ b/composer.json
@@ -26,14 +26,14 @@
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
+        "heroku/heroku-buildpack-php": "*",
         "symfony/browser-kit": "^4.0",
         "symfony/css-selector": "^4.0",
         "symfony/debug-pack": "*",
-        "symfony/maker-bundle": "^1.0",
+        "symfony/maker-bundle": "^1.4",
         "symfony/phpunit-bridge": "^4.0",
         "symfony/profiler-pack": "*",
-        "symfony/web-server-bundle": "^4.0",
-        "heroku/heroku-buildpack-php": "*"
+        "symfony/web-server-bundle": "^4.0"
     },
     "config": {
         "preferred-install": {
